test/types/type_variables/deitz/part7/test_infer_class1.good
test_infer_class1.chpl:6: error: unresolved call 'C.init(f=1)'
test_infer_class1.chpl:1: note: candidates are: C.init(type t, f: t)
