test/types/type_variables/deitz/part7/test_infer_class1.chpl
class C {
  type t;
  var f : t;
}

var c = new borrowed C(f = 1);

writeln(c);
